--- a/app/src/main/res/layout/activity_patent.xml
+++ b/app/src/main/res/layout/activity_patent.xml
@@ -129,6 +129,7 @@
         </com.handmark.pulltorefresh.library.PullToRefreshListView>
         <android.support.design.widget.FloatingActionButton
             xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/fab"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_alignParentBottom="true"
