--- a/app/src/main/res/layout/activity_publish_patent.xml
+++ b/app/src/main/res/layout/activity_publish_patent.xml
@@ -316,6 +316,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/add_image_group"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
@@ -325,11 +326,25 @@
                 <!--   <GridView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></GridView>-->
-                <ImageView
-                    android:id="@+id/select_pic"
-                    android:layout_width="60dp"
+                    <ImageView
+                        android:id="@+id/select_pic"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:scaleType="fitStart"
+                        android:src="@mipmap/uploading"
+                        />
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/id_recyclerview_horizontal"
+                    android:layout_width="match_parent"
                     android:layout_height="60dp"
-                    />
+                    android:layout_centerVertical="true"
+
+                    android:scrollbars="none" />
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                </HorizontalScrollView>
+
 
             </LinearLayout>
 
