--- a/app/src/main/res/layout/activity_publish_creative.xml
+++ b/app/src/main/res/layout/activity_publish_creative.xml
@@ -221,14 +221,26 @@ android:orientation="vertical">
             android:layout_marginRight="30dp"
             android:layout_marginTop="20dp"
             android:orientation="horizontal">
-            <!--   <GridView
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"></GridView>-->
-            <ImageView
-                android:id="@+id/select_pic"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                />
+
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="none">
+
+                <LinearLayout
+                    android:id="@+id/all_pic"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/select_pic"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:scaleType="fitStart"
+                        android:src="@mipmap/uploading" />
+                </LinearLayout>
+            </HorizontalScrollView>
 
         </LinearLayout>
 
